--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,10 @@
 # VSCode config stuff
 !.vscode/c_cpp_properties.json
 !.vscode/tasks.json
+!.vscode/settings.json
+
+# Jetbrains IDEs
+.idea/
 
 # NDK stuff
 out/
@@ -43,10 +47,18 @@ out/
 [Oo]bjs/
 ndkpath.txt
 *.zip
-
-# Dependencies & other files
-extern/
-CustomBackgrounds.zip
-qpm.shared.json
+*.txt
+*.log
 Android.mk.backup
+
+# QPM stuff
+[Ee]xtern/
 *.qmod
+qpm.shared.json
+qpm_defines.cmake
+![Cc][Mm]ake[Ll]ists.txt
+
+# CMake stuff
+[Bb]uild/
+cmake-build-*/
+extern.cmake
