--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore clangd cache
+.cache/
+
 # Prerequisites
 *.d
 
@@ -34,6 +37,10 @@
 # VSCode config stuff
 !.vscode/c_cpp_properties.json
 !.vscode/tasks.json
+!.vscode/settings.json
+
+# Jetbrains IDEs
+.idea/
 
 # NDK stuff
 out/
@@ -43,10 +50,21 @@ out/
 [Oo]bjs/
 ndkpath.txt
 *.zip
-
-# Dependencies & other files
-extern/
-CustomBackgrounds.zip
-qpm.shared.json
+*.txt
+*.log
 Android.mk.backup
+
+# QPM stuff
+[Ee]xtern/
 *.qmod
+mod.json
+qpm_defines.cmake
+![Cc][Mm]ake[Ll]ists.txt
+
+# CMake stuff
+[Bb]uild/
+cmake-build-*/
+extern.cmake
+
+# QMOD Schema
+mod.json.schema
