--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,22 @@
 {
     "files.associations": {
-        "__bit_reference": "cpp",
+        "iosfwd": "cpp",
         "__config": "cpp",
+        "__nullptr": "cpp",
+        "thread": "cpp",
+        "any": "cpp",
+        "deque": "cpp",
+        "list": "cpp",
+        "map": "cpp",
+        "optional": "cpp",
+        "queue": "cpp",
+        "set": "cpp",
+        "stack": "cpp",
+        "unordered_map": "cpp",
+        "unordered_set": "cpp",
+        "variant": "cpp",
+        "vector": "cpp",
+        "__bit_reference": "cpp",
         "__debug": "cpp",
         "__errc": "cpp",
         "__functional_base": "cpp",
@@ -9,14 +24,12 @@
         "__locale": "cpp",
         "__mutex_base": "cpp",
         "__node_handle": "cpp",
-        "__nullptr": "cpp",
         "__split_buffer": "cpp",
         "__string": "cpp",
         "__threading_support": "cpp",
         "__tree": "cpp",
         "__tuple": "cpp",
         "algorithm": "cpp",
-        "any": "cpp",
         "array": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
@@ -43,7 +56,6 @@
         "ctime": "cpp",
         "cwchar": "cpp",
         "cwctype": "cpp",
-        "deque": "cpp",
         "exception": "cpp",
         "coroutine": "cpp",
         "propagate_const": "cpp",
@@ -54,29 +66,22 @@
         "initializer_list": "cpp",
         "iomanip": "cpp",
         "ios": "cpp",
-        "iosfwd": "cpp",
         "iostream": "cpp",
         "istream": "cpp",
         "iterator": "cpp",
         "limits": "cpp",
-        "list": "cpp",
         "locale": "cpp",
-        "map": "cpp",
         "memory": "cpp",
         "mutex": "cpp",
         "new": "cpp",
         "numeric": "cpp",
-        "optional": "cpp",
         "ostream": "cpp",
-        "queue": "cpp",
         "random": "cpp",
         "ratio": "cpp",
         "regex": "cpp",
         "scoped_allocator": "cpp",
-        "set": "cpp",
         "span": "cpp",
         "sstream": "cpp",
-        "stack": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "string": "cpp",
@@ -87,18 +92,26 @@
         "type_traits": "cpp",
         "typeindex": "cpp",
         "typeinfo": "cpp",
-        "unordered_map": "cpp",
-        "unordered_set": "cpp",
         "utility": "cpp",
         "valarray": "cpp",
-        "variant": "cpp",
-        "vector": "cpp",
+        "xstring": "cpp",
+        "xlocale": "cpp",
+        "xlocbuf": "cpp",
+        "concepts": "cpp",
         "filesystem": "cpp",
-        "hash_map": "cpp",
-        "hash_set": "cpp",
-        "simd": "cpp",
-        "thread": "cpp",
-        "concepts": "cpp"
-    },
-    "git.ignoreLimitWarning": true
+        "shared_mutex": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmes": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xmemory": "cpp",
+        "xstddef": "cpp",
+        "xtr1common": "cpp",
+        "xtree": "cpp",
+        "xutility": "cpp"
+    }
 }
